--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@joyid/core": "^0.0.9",
     "@legendapp/state": "^0.23.4",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
+    "@radix-ui/react-toast": "^1.1.3",
     "@svgr/webpack": "5.5.0",
     "@types/node": "18.15.5",
     "@types/react": "18.0.28",
