--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@joyid/core": "^0.0.9",
+    "@joyid/core": "0.1.0",
     "@legendapp/state": "^0.23.4",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-toast": "^1.1.3",
