feat: add end time and ignore error which has already claimed

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 NEXT_NFTBOX_ACCESS_TOKEN=
 NEXT_NFTBOX_SERVER_URL=https://goldenlegend.staging.nftbox.me/api/external/v1
 NEXT_PUBLIC_EVENT_TOKEN_UUID=e1b5d17d-0a0a-403a-a979-08fef0bdfaf0
-NEXT_PUBLIC_EVENT_END_TIME='2023-3-28 00:00'
+NEXT_PUBLIC_EVENT_END_TIME='2023/4/16 00:00'
 NEXT_PUBLIC_JOYID_APP_URL=https://app.joyid.dev
