--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^1.2.1",
     "lucide-react": "^0.127.0",
     "next": "13.2.4",
+    "next-plausible": "^3.7.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^2.1.1",
