--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@joyid/core": "0.1.0",
+    "@juggle/resize-observer": "^3.4.0",
     "@legendapp/state": "^0.23.4",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
     "@radix-ui/react-toast": "^1.1.3",
