--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.3.4",
     "class-variance-authority": "^0.4.0",
     "clsx": "^1.2.1",
+    "dayjs": "^1.11.9",
     "lucide-react": "^0.127.0",
     "next": "13.2.4",
     "next-plausible": "^3.7.2",
